Replace images fashion on About page, made font smaller on hero test on Home

--- a/styles/style.css
+++ b/styles/style.css
@@ -2369,6 +2369,9 @@ a:focus:not(:focus-visible) {
     font-size: 50px;
     line-height: 56px;;
   }
+  .hero__description {
+    font-size: 16px;
+  }
   .case-highlights__visual-image--wide,
   .case-highlights__visual-image--narrow,
   .case-highlights__visual-image--900,
