--- a/styles/style.css
+++ b/styles/style.css
@@ -2394,6 +2394,7 @@ a:focus:not(:focus-visible) {
     z-index: 2001;
     margin: 0 !important;
   }
+ 
   .site-header,
   .site-header .container {
     min-height: 46px;       
@@ -2434,6 +2435,28 @@ a:focus:not(:focus-visible) {
     z-index: 3000;
     display: block;
   }
+  
+  .site-header {
+    padding: 10px 0;
+    min-height: 66px; /* keep it tall enough */
+    display: flex;
+    align-items: center;
+  }
+
+  .site-header .container {
+    display: flex;
+    align-items: center;
+  }
+
+  .menu-toggle {
+    width: 46px;
+    height: 46px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+
   
   .work-card__subtitle{
     font-size: 18px;
